--- a/index.html
+++ b/index.html
@@ -29,17 +29,10 @@ color:rgb(120,10,0);
 <br />
 
 
-
-
+{% comment %}
 
 .jetzt:<br /><br />
 
-02.06.2018 Hanna Schaich 'A Kiss Away From Reality' / Danielle Pamp (Performance)
-Ausstellungsdauer: 03.06. - 15.07.2018<br /><br />
-
-26.06.2018 Bad Weather Report<br /><br />
-
-{% comment %}
 
 Kathrin Stumreich "Sovereignity"<br />
 Ausstellungsdauer: 11.03. - 01.04.2018<br /><br />
@@ -59,6 +52,10 @@ ________________________________________________________________<br />
 <br />
 <br />
 .bald:<br /><br />
+
+4. + 5.9. Ausstellung: Transient Hole (Variations) VII / Performance: Hui Ye, Alexander Felch
+
+14.09. Ausstellung + Perfomance: Hugo Esquinca
 
 
 {% endcomment %}
