--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-4. + 5.9. Ausstellung: Transient Hole (Variations) VII / Performance: Hui Ye, Alexander Felch
+4. + 5.9. Ausstellung: Transient Hole (Variations) VII / Performance: Hui Ye, Alexander Felch<br /><br />
 
 14.09. Ausstellung + Perfomance: Hugo Esquinca
 
