--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ ________________________________________________________________<br />
 
 4. + 5.9. Ausstellung: Transient Hole (Variations) VII / Performance: Hui Ye, Alexander Felch<br /><br />
 
-14.09. Ausstellung + Perfomance: Hugo Esquinca
+14.09. Ausstellung + Perfomance: Hugo Esquinca - untitled (exercise on pulse and density)
 
 
 {% comment %}
