--- a/archiv.html
+++ b/archiv.html
@@ -9,7 +9,9 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
-Transient Hole (Variations) VII (Ausstellung) / Hui Ye (Performance) 4./5.9.
+Hugo Esquinca - untitled (exercise on pulse and density), 14.09.2018
+<br /><br />
+Transient Hole (Variations) VII / Hui Ye 4./5.9.
 <br /><br />
 Bad Weather Report - 26.06.18
 <br /><br />
@@ -17,52 +19,52 @@ Kooperation mit salon elise #3 / on site – on line – on foot - 16.06.18
 <br /><br />
 The Fondle Tour / Vienna - Mitra Saboury, Nina Sarnelle, Megan Snowe - 11.06.18 
 <br /><br />
-Hanna Schaich 'A Kiss Away From Reality' (Ausstellung) / Danielle Pamp (Performance) - 02.06.18 
+Hanna Schaich 'A Kiss Away From Reality' (Ausstellung) / Danielle Pamp - 02.06.18 
 <br /><br />
 ZGB / Dario Fariello, Mikael Szafirowski, Alex Riva / <br />
-Yoshimoto Yumiko, Jakob Gnigler (Performance) - 20.05.18 
+Yoshimoto Yumiko, Jakob Gnigler - 20.05.18 
 <br /><br />
-Ⓐusländer (Performance) - 16.05.18 
+Ⓐusländer - 16.05.18 
 <br /><br />
-Michael Schuhmacher (Performance) - 12.05.18
+Michael Schuhmacher - 12.05.18
 <br /><br />
-Two Duos / Cristián Alvear + Klaus Filip, Gudinni Cortina + Burkhard Stangl (Performance) - 27.04.18
+Two Duos / Cristián Alvear + Klaus Filip, Gudinni Cortina + Burkhard Stangl - 27.04.18
 <br /><br />
-Uli Kühn (Ausstellung) - 14.04.18
+Uli Kühn - 14.04.18
 <br /><br />
-Pagan 11 / Rovar17  / Emerge / Syporca Whandal (Performance) - 25.03.18
+Pagan 11 / Rovar17  / Emerge / Syporca Whandal - 25.03.18
 <br /><br />
-Steve Bates / Black Seas (Performance) - 16.03.18
+Steve Bates / Black Seas - 16.03.18
 <br /><br />
 Kathrin Stumreich - 11.03.18
 <br /><br />
-Répertoire général mit Peter Moosgaard (Repertoire) - 09.03.18
+Répertoire général mit Peter Moosgaard - 09.03.18
 <br /><br />
-Antonio Raia + Renato Fiorito / Asylum (Performance) - 04.03.18
+Antonio Raia + Renato Fiorito / Asylum - 04.03.18
 <br /><br />
-Rheuma 3000 (Performance) - Sebastian Six (Performance) - 03.02.18
+Rheuma 3000 (Performance) - Sebastian Six - 03.02.18
 <br /><br />
-Noid (Ausstellung) - Christine Schörkhuber (Performance) - 01.02.18
+Noid (Ausstellung) - Christine Schörkhuber - 01.02.18
 <br /><br />
-Seijiro Murayama + Klaus Filip (Performance) - 15.01.18
+Seijiro Murayama + Klaus Filip - 15.01.18
 <br /><br />
-Jorge Sanchez Chiong (Performance) - 20.12.17
+Jorge Sanchez Chiong - 20.12.17
 <br /><br />
-Marko Markovic (Performance) at Jahresendzeitschokoladenhohlkörper, rhiz - 17.12.17
+Marko Markovic at Jahresendzeitschokoladenhohlkörper, rhiz - 17.12.17
 <br /><br />
-Phil Minton + dieb13 (Performance) - 03.12.17
+Phil Minton + dieb13 - 03.12.17
 <br /><br />
 Carlos Vasconzelos - 10.11.17
 <br /><br />
-Audrey Chen & Burkhard Stangl (Performance) - 08.11.17 
+Audrey Chen & Burkhard Stangl - 08.11.17 
 <br /><br />
 Transient Hole, 12-14.10.17<br />
 live: Paul Gründorfer + Philip Leitner<br />
 Michael Fischer
 <br /><br />
-Muyassar Kurdi (US) / Eric Arn (US/AT) (Performance) - 15.09.17 
+Muyassar Kurdi / Eric Arn - 15.09.17 
 <br /><br />
-Jérôme Noetinger + Aude Romary (FR) (Performance) - 13.09.17
+Jérôme Noetinger + Aude Romary - 13.09.17
 <br /><br />
 Pit Noack / Labor für Sprechalgorithmen - 01.07 bis 21.07.17
 <br /><br />
@@ -70,11 +72,11 @@ Natalia Dominguez Rangel / Gudinni Cortina / Alfred Lenz - 09.06.17
 <br /><br />
 Rinus van Alebeek, Klub Moozak - 06.06.17
 <br /><br />
-Last King Of Poland, Gourmet Fleischsülze (Performance) - 22.05.17
+Last King Of Poland, Gourmet Fleischsülze - 22.05.17
 <br /><br />
-Dieb13 (Lecture-Performance) - 18.05.17
+Dieb13 - 18.05.17
 <br /><br />
-Parallel Asteroid (Performance) - 12.05.17
+Parallel Asteroid - 12.05.17
 <br /><br />
 Strotter Inst. - 06.05.17
 <br /><br />
