--- a/index.html
+++ b/index.html
@@ -29,18 +29,17 @@ color:rgb(120,10,0);
 <br />
 
 
-{% comment %}
+
 
 .jetzt:<br /><br />
 
-
-Kathrin Stumreich "Sovereignity"<br />
-Ausstellungsdauer: 11.03. - 01.04.2018<br /><br />
-
-25.05.2018 Peter Moosgaard (Ausstellung)
+Hugo Esquinca - untitled (exercise on pulse and density)<br />
+Ausstellungsdauer: 14.09.-05.10.2018<br /><br />
 
 ________________________________________________________________<br />
 
+
+{% comment %}
 {% endcomment %}
 
 
@@ -48,10 +47,15 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-14.09. Ausstellung + Perfomance: Hugo Esquinca - untitled (exercise on pulse and density)
-
+Oct. 6 2018, ISLAJA (FUTURE SPECTERS,czirp czirp)
+<br /><br />
+Oct. 17 2018, Lukas Simonis + Ivan Palacky
+<br /><br />
+Oct. 19 2019, Timothée Quist
 
 {% comment %}
+
+x.x. Ausstellung + Perfomance: 
 
 {% endcomment %}
 
