--- a/archiv.html
+++ b/archiv.html
@@ -9,9 +9,9 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
-Hugo Esquinca - untitled (exercise on pulse and density), 14.09.2018
+Hugo Esquinca - 14.09.2018
 <br /><br />
-Transient Hole (Variations) VII / Hui Ye 4./5.9.
+Transient Hole (Variations) VII / Hui Ye - 04.-05.9.2018
 <br /><br />
 Bad Weather Report - 26.06.18
 <br /><br />
