--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-Oct. 6 2018, ISLAJA (FUTURE SPECTERS,czirp czirp)
+Oct. 6 2018, FUTURE SPECTERS / ISLAJA (czirp czirp)
 <br /><br />
 Oct. 17 2018, Lukas Simonis + Ivan Palacky
 <br /><br />
