--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-Oct. 6 2018, FUTURE SPECTERS / ISLAJA (czirp czirp)
+6.10.2018, FUTURE SPECTERS / ISLAJA (czirp czirp)
 <br /><br />
-Oct. 17 2018, Lukas Simonis + Ivan Palacky
+17.10.2018, Lukas Simonis + Ivan Palacky
 <br /><br />
-Oct. 19 2019, Timothée Quist
+19.10.2018, Timothée Quist
 
 {% comment %}
 
