--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ ________________________________________________________________<br />
 <br /><br />
 17.10.2018, Lukas Simonis + Ivan Palacky
 <br /><br />
-19.10.2018, Timothée Quist
+19.10.2018, Timothée Quosst
 
 {% comment %}
 
