--- a/archiv.html
+++ b/archiv.html
@@ -10,7 +10,7 @@ group: navigation
 <p style="font-size:18px" text-align="justify" align="right">
 
 
-ISLAJA (czirp czirp) - 06.10.2018,
+ISLAJA (czirp czirp) - 06.10.2018
 <br /><br />
 Hugo Esquinca - 14.09.2018
 <br /><br />
