--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ ________________________________________________________________<br />
 
 17.10.2018, Lukas Simonis + Ivan Palacky
 <br /><br />
-19.10.2018, Timothée Quost
+19.10.2018, Timothée Quost / Dario Sanfilippo
 <br /><br />
 ...
 
