--- a/archiv.html
+++ b/archiv.html
@@ -9,7 +9,10 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
-
+Timothée Quost / Dario Sanfilippo - 19.10.2018
+<br /><br />
+Lukas Simonis + Ivan Palacky - 17.10.2018
+<br /><br />
 ISLAJA (czirp czirp) - 06.10.2018
 <br /><br />
 Hugo Esquinca - 14.09.2018
