--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-17.10.2018, Lukas Simonis + Ivan Palacky
+27.10.2018, H&M / Arik Kofranek + Hannes Hoelzl
 <br /><br />
-19.10.2018, Timothée Quost / Dario Sanfilippo
+31.10.2018, Liz Allbee & Los Glissandos / Tena Novak Vincek + Damir P. Kafka 
 <br /><br />
 ...
 
