--- a/archiv.html
+++ b/archiv.html
@@ -9,15 +9,18 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
-Timothée Quost / Dario Sanfilippo - 19.10.2018
+
+H&M / Arik Kofranek + Hannes Hoelzl - 27.10.18
 <br /><br />
-Lukas Simonis + Ivan Palacky - 17.10.2018
+Timothée Quost / Dario Sanfilippo - 19.10.18
 <br /><br />
-ISLAJA (czirp czirp) - 06.10.2018
+Lukas Simonis + Ivan Palacky - 17.10.18
 <br /><br />
-Hugo Esquinca - 14.09.2018
+ISLAJA (czirp czirp) - 06.10.18
 <br /><br />
-Transient Hole (Variations) VII / Hui Ye - 04.-05.9.2018
+Hugo Esquinca - 14.09.18
+<br /><br />
+Transient Hole (Variations) VII / Hui Ye - 04.-05.09.18
 <br /><br />
 Bad Weather Report - 26.06.18
 <br /><br />
