--- a/archiv.html
+++ b/archiv.html
@@ -9,7 +9,8 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
-
+Liz Allbee & Los Glissandos / Tena Novak Vincek + Damir P. Kafka - 31.10.18
+<br /><br />
 H&M / Arik Kofranek + Hannes Hoelzl - 27.10.18
 <br /><br />
 Timothée Quost / Dario Sanfilippo - 19.10.18
