--- a/index.html
+++ b/index.html
@@ -45,11 +45,16 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-31.10.2018, Liz Allbee & Los Glissandos / Tena Novak Vincek + Damir P. Kafka 
+10.11.2018, Peter Moosgaard
+
+21.11.2018, Billy Roisz
+
 <br /><br />
 ...
 
 {% comment %}
+
+31.10.2018, Liz Allbee & Los Glissandos / Tena Novak Vincek + Damir P. Kafka 
 
 x.x. Ausstellung + Perfomance:
 
