--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-10.11.2018, Peter Moosgaard
+10.11.2018, Peter Moosgaard, sound: Clemens Hausch (MOOZAK)
 
 <br /><br />
 
