--- a/index.html
+++ b/index.html
@@ -54,14 +54,16 @@ ________________________________________________________________<br />
 <br /><br />
 ...
 
+<br /><br />
 
 
 <p>
 <font size="2">
-Peter Moosgaard -  紙紮 Helldevices <br /><br />
+<b>Peter Moosgaard -  紙紮 Helldevices</b>
+<br /><br />
  
 When it comes to consumer technologies, it is often forgotten that apart from their everyday use they have a different life, an after-life so to say in various cultures around the globe. It is commonly neglected that products of consumerism and digital efficiency have a life that succeed their mere functionality and everyday use, that these products can transcend their purpose into the realm of ghosts and spirits. Modern thinking did a precise job in separating the material world from the realms of the spirits, merely leaving a void of metaphysical desires, which are more commonly met by consumer culture, in the attempt to fill that void with auratic devices. After extensive research on the cargo cults of Malenesia Peter Moosgaard soon opened up a larger field of research, that could provide a unique perspective on consumer culture at the intersection of art, religion and ethnography. 紙紮店 - For a long time the taoist practice of folding paper into dragons, flowers and gold was considered a form of contemplation and meditation on the ephemeral nature of things. Peter Moosgaard discovered so called „Helldevices“ on an extensive journey through the Chinese province of Guandong in 2018, which are paper replicas of tech-products and status symbols, traditionally burned at the graveyard to commemorate ancestors. During the „grave sweeping“ days in spring, called Qingming, paper money (or „hellmoney“) has been burned for the spirits for centuries. It seemed in the last two decades a more contemporary approach was chosen. The burning of paper iPhones, iPads, Rolex Watches, Nike Shoes, Louis Vuitton bags should please the dead, for them to have these luxuries in the afterlife. These replicas of luxury items were found in various forms of the known commodity market. The research trip on the double life of things, continued over northern Thailand, where german softdrink Fanta Strawberry found its way into animist folkpractice, as it resembles the bright red colour of blood sacrifice. The exhibition will display some of the findings and ethnographic artifacts collected throughout the 2018 journey, as it is left open whether - or in which extent - these artifacts and stories are themsevles fakes.
-<br />
+<br /><br />
 </font> 
 </p><p>
 <img src="{{ site.url }}/images/moosgaard.jpg" alt="image">
