--- a/archiv.html
+++ b/archiv.html
@@ -9,6 +9,10 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
+Billy Roisz - 22.11.18
+<br /><br />
+Peter Moosgaard - 10.11.18
+<br /><br />
 Liz Allbee & Los Glissandos / Tena Novak Vincek + Damir P. Kafka - 31.10.18
 <br /><br />
 H&M / Arik Kofranek + Hannes Hoelzl - 27.10.18
