--- a/index.html
+++ b/index.html
@@ -45,16 +45,22 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-10.11.2018, Peter Moosgaard, sound: Clemens Hausch (MOOZAK)
+Anna Lerchbaumer<br /><br />
 
-<br /><br />
+Robert Mathy<br /><br />
 
-22.11.2018, Billy Roisz
+
 
 <br /><br />
 ...
 
 <br /><br />
+
+
+
+
+{% comment %}
+
 
 
 <p>
@@ -71,7 +77,6 @@ When it comes to consumer technologies, it is often forgotten that apart from th
 <img src="{{ site.url }}/images/moosgaard.jpg" alt="image">
 </p>
 
-{% comment %}
 
 31.10.2018, Liz Allbee & Los Glissandos / Tena Novak Vincek + Damir P. Kafka 
 
