--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@ color:rgb(120,10,0);
 .jetzt:<br /><br />
 
 
+Billy Roisz bis 31.12.2018
+
+<br /><br />
+
+dannach Winterpause
+
+<br /><br />
 ________________________________________________________________<br />
 
 
@@ -47,8 +54,6 @@ ________________________________________________________________<br />
 
 Anna Lerchbaumer<br /><br />
 
-
-<br /><br />
 ...
 
 <br /><br />
