--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Billy Roisz bis 31.12.2018
 
 <br /><br />
 
-dannach Winterpause
+danach Winterpause
 
 <br /><br />
 ________________________________________________________________<br />
