--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-Anna Lerchbaumer<br /><br />
+23.1.2019 Anna Lerchbaumer - Electrical Disobedience - The "Elektra" Case Files<br /><br />
+Ausstellungsdauer: 24.01.-12.2.2019<br /><br />
 
-...
+26.1.2019 Jon Collin / Eric Arn
+
 
 <br /><br />
 
