--- a/archiv.html
+++ b/archiv.html
@@ -9,6 +9,10 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
+Jon Collin / Eric Arn - 26.01.19
+<br /><br />
+Anna Lerchbaumer - 23.01.19 
+<br /><br />
 Billy Roisz - 22.11.18
 <br /><br />
 Peter Moosgaard - 10.11.18
