--- a/index.html
+++ b/index.html
@@ -29,45 +29,32 @@ color:rgb(120,10,0);
 <br />
 
 {% comment %}
+{% endcomment %}
+
 
 .jetzt:<br /><br />
 
+Anna Lerchbaumer - Electrical Disobedience - The "Elektra" Case Files<br /><br />
+Ausstellungsdauer: 24.01.-12.2.2019<br /><br />
 
-Billy Roisz bis 31.12.2018
-
-<br /><br />
-
-danach Winterpause
 
 <br /><br />
 ________________________________________________________________<br />
 
 
 
-{% endcomment %}
-
-
 <br />
 <br />
 .bald:<br /><br />
 
-23.1.2019 Anna Lerchbaumer - Electrical Disobedience - The "Elektra" Case Files<br /><br />
-Ausstellungsdauer: 24.01.-12.2.2019<br /><br />
+24.02. Robert Mathy (Ausstellung)<br /><br />
+Ausstellungsdauer: 24.02.-24.03.2019<br /><br />
 
-<br />
-
-26.1.2019 Jon Collin / Eric Arn
-
-
-<br /><br />
 
 
 
 
 {% comment %}
-
-Robert Mathy<br /><br />
-
 
 <p>
 <font size="2">
