--- a/index.html
+++ b/index.html
@@ -29,32 +29,39 @@ color:rgb(120,10,0);
 <br />
 
 {% comment %}
-{% endcomment %}
+
 
 
 .jetzt:<br /><br />
-
-Anna Lerchbaumer - Electrical Disobedience - The "Elektra" Case Files<br /><br />
-Ausstellungsdauer: 24.01.-12.2.2019<br /><br />
 
 
 
 ________________________________________________________________<br />
 
 
+<br />
+<br />
 
-<br />
-<br />
+{% endcomment %}
+
+
 .bald:<br /><br />
 
-24.02. Robert Mathy (Ausstellung)<br /><br />
+15.02. Nomed<br /><br />
+
+20.02. Jacob Samuel<br /><br />
+
+22.02. Robert Mathy (Ausstellung)<br /><br />
+
 Ausstellungsdauer: 24.02.-24.03.2019<br /><br />
 
 
 
 
-
 {% comment %}
+
+Anna Lerchbaumer - Electrical Disobedience - The "Elektra" Case Files<br /><br />
+Ausstellungsdauer: 24.01.-12.2.2019<br /><br />
 
 <p>
 <font size="2">
