--- a/index.html
+++ b/index.html
@@ -47,14 +47,19 @@ ________________________________________________________________<br />
 
 .bald:<br /><br />
 
-15.02. Nomed<br /><br />
-
 20.02. Jacob Samuel<br /><br />
 
 22.02. Robert Mathy (Ausstellung)<br /><br />
 
 Ausstellungsdauer: 24.02.-24.03.2019<br /><br />
 
+15.03. Coco Bechamel<br /><br />
+
+20.03. pass.age 1991<br /><br />
+
+23.03. Two pigs under one umbrella<br /><br />
+
+30.03. Elvin Brandhi / Alessandra Eramo<br /><br />
 
 
 
