--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@ ________________________________________________________________<br />
 
 20.02. Jacob Samuel<br /><br />
 
-23.02. Robert Mathy (Ausstellung)<br /><br />
-
-Ausstellungsdauer: 24.02.-24.03.2019<br /><br />
+23.02. Robert Mathy (Ausstellung) / Ausstellungsdauer: 24.02.-24.03.2019<br /><br />
 
 15.03. Coco Bechamel<br /><br />
 
