--- a/archiv.html
+++ b/archiv.html
@@ -9,7 +9,7 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
-Nomed 15.02.19
+Nomed - 15.02.19
 <br /><br />
 Jon Collin / Eric Arn - 26.01.19
 <br /><br />
