--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@ color:rgb(120,10,0);
 <br />
 
 {% comment %}
-
+{% endcomment %}
 
 
 .jetzt:<br /><br />
 
-
+22.02. Robert Mathy (Ausstellung) / Ausstellungsdauer: 23.02.-24.03.2019<br /><br />
 
 ________________________________________________________________<br />
 
@@ -42,16 +42,13 @@ ________________________________________________________________<br />
 <br />
 <br />
 
-{% endcomment %}
+
 
 
 .bald:<br /><br />
 
-20.02. Jacob Samuel<br /><br />
 
-22.02. Robert Mathy (Ausstellung) / Ausstellungsdauer: 23.02.-24.03.2019<br /><br />
-
-15.03. Coco Bechamel<br /><br />
+15.03. Coco Béchamel<br /><br />
 
 20.03. pass.age 1991<br /><br />
 
