--- a/archiv.html
+++ b/archiv.html
@@ -9,6 +9,9 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
+
+Jacob Samuel - 20.02.19
+<br /><br />
 Nomed - 15.02.19
 <br /><br />
 Jon Collin / Eric Arn - 26.01.19
