--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ ________________________________________________________________<br />
 
 20.03. pass.age 1991<br /><br />
 
-23.03. Two pigs under one umbrella<br /><br />
+23.03. Two pigs under one umbrella / Isabelle Duthoit + Angélica Castelló<br /><br />
 
 30.03. Elvin Brandhi / Alessandra Eramo<br /><br />
 
