--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ ________________________________________________________________<br />
 
 23.03. Two pigs under one umbrella / Isabelle Duthoit + Angélica Castelló<br /><br />
 
-30.03. Elvin Brandhi / Alessandra Eramo<br /><br />
+30.03. Elvin Brandhi + Firas / Alessandra Eramo<br /><br />
 
 
 
