--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@ ________________________________________________________________<br />
 
 30.03. Elvin Brandhi + Firas / Alessandra Eramo<br /><br />
 
+11.04. Tintin Patrone “Universal humming” (Ausstellung)<br />
+Ausstellungsdauer: 12.04. - 11.05.2019<br />
+Tintin Patrone ist Artist in Residence 2019 von studio das weisse haus und Zentrale 
+
 
 
 {% comment %}
