--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ color:rgb(120,10,0);
 
 .jetzt:<br /><br />
 
-22.02. Robert Mathy (Ausstellung) / Ausstellungsdauer: 23.02.-24.03.2019<br /><br />
+22.02. Robert Mathy (Ausstellung) / Ausstellungsdauer: 23.02.-30.03.2019<br /><br />
 
 ________________________________________________________________<br />
 
@@ -43,18 +43,11 @@ ________________________________________________________________<br />
 <br />
 
 
-
-
 .bald:<br /><br />
 
-
-15.03. Coco Béchamel<br /><br />
-
-20.03. pass.age 1991<br /><br />
-
-23.03. Two pigs under one umbrella / Isabelle Duthoit + Angélica Castelló<br /><br />
-
 30.03. Elvin Brandhi + Firas / Alessandra Eramo<br /><br />
+
+04.04. Victor Mazón / Nicolás Spencer<br /><br />
 
 11.04. Tintin Patrone “Universal humming” (Ausstellung)<br />
 Ausstellungsdauer: 12.04. - 11.05.2019<br />
