--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@ ________________________________________________________________<br />
 
 11.04. Tintin Patrone “Universal humming” (Ausstellung)<br />
 Ausstellungsdauer: 12.04. - 11.05.2019<br />
-Tintin Patrone ist Artist in Residence 2019 von studio das weisse haus und Zentrale 
+Tintin Patrone ist Artist in Residence 2019 von studio das weisse haus und Zentrale<br /><br />
+
+16.04. JD Zazie / Angelica Castello<br /><br />
+
+30.03. Arnaud Riviere + Olivier di Placido
 
 
 
