--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ ________________________________________________________________<br />
 
 30.03. Elvin Brandhi + Firas / Alessandra Eramo<br /><br />
 
-04.04. Victor Mazón / Nicolás Spencer<br /><br />
+04.04. Nicolás Spencer<br /><br />
 
 11.04. Tintin Patrone “Universal humming” (Ausstellung)<br />
 Ausstellungsdauer: 12.04. - 11.05.2019<br />
@@ -55,7 +55,7 @@ Tintin Patrone ist Artist in Residence 2019 von studio das weisse haus und Zentr
 
 16.04. JD Zazie / Angelica Castello<br /><br />
 
-30.03. Arnaud Riviere + Olivier di Placido
+30.04. Arnaud Riviere + Olivier di Placido
 
 
 
