--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ ________________________________________________________________<br />
 
 30.03. Elvin Brandhi + Firas / Alessandra Eramo<br /><br />
 
-04.04. Nicolás Spencer<br /><br />
+04.04. Binär / Nicolás Spencer<br /><br />
 
 11.04. Tintin Patrone “Universal humming” (Ausstellung)<br />
 Ausstellungsdauer: 12.04. - 11.05.2019<br />
