--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@ color:rgb(120,10,0);
 
 .jetzt:<br /><br />
 
-22.02. Robert Mathy (Ausstellung) / Ausstellungsdauer: 23.02.-30.03.2019<br /><br />
+Tintin Patrone “Universal humming” (Ausstellung)<br />
+Ausstellungsdauer: 12.04. - 11.05.2019<br />
+Tintin Patrone ist Artist in Residence 2019 von studio das weisse haus und Zentrale<br /><br />
 
 ________________________________________________________________<br />
 
@@ -46,14 +48,6 @@ ________________________________________________________________<br />
 
 
 .bald:<br /><br />
-
-04.04. Binär / Nicolás Spencer<br /><br />
-
-11.04. Tintin Patrone “Universal humming” (Ausstellung)<br />
-Ausstellungsdauer: 12.04. - 11.05.2019<br />
-Tintin Patrone ist Artist in Residence 2019 von studio das weisse haus und Zentrale<br /><br />
-
-16.04. JD Zazie / Angelica Castello<br /><br />
 
 30.04. Arnaud Riviere + Olivier di Placido
 
