--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ color:rgb(120,10,0);
 <p style="font-size:18px" text-align="justify" align="left">
 <br />
 
-{% comment %}
+
 
 
 
@@ -44,16 +44,20 @@ ________________________________________________________________<br />
 <br />
 <br />
 
+
+{% comment %}
 {% endcomment %}
 
 
 .bald:<br /><br />
 
-30.04. Arnaud Riviere + Olivier di Placido
-
+17.05.2019 Lydia Nsiah (Ausstellung)<br />
+Ausstellungsdauer: 18.05. - 15.06.2019<br />
 
 
 {% comment %}
+
+30.04. Arnaud Riviere + Olivier di Placido
 
 Anna Lerchbaumer - Electrical Disobedience - The "Elektra" Case Files<br /><br />
 Ausstellungsdauer: 24.01.-12.2.2019<br /><br />
