--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@ color:rgb(120,10,0);
 
 .jetzt:<br /><br />
 
-Tintin Patrone “Universal humming” (Ausstellung)<br />
-Ausstellungsdauer: 12.04. - 11.05.2019<br />
-Tintin Patrone ist Artist in Residence 2019 von studio das weisse haus und Zentrale<br /><br />
 
+17.05.2019 Lydia Nsiah "to forget" (Ausstellung)<br />
+Ausstellungsdauer: 18.05. - 15.06.2019<br />
+
+{% comment %}
 ________________________________________________________________<br />
 
 
@@ -45,17 +46,18 @@ ________________________________________________________________<br />
 <br />
 
 
-{% comment %}
+.bald:<br /><br />
+
+
 {% endcomment %}
 
 
-.bald:<br /><br />
-
-17.05.2019 Lydia Nsiah (Ausstellung)<br />
-Ausstellungsdauer: 18.05. - 15.06.2019<br />
-
 
 {% comment %}
+
+Tintin Patrone “Universal humming” (Ausstellung)<br />
+Ausstellungsdauer: 12.04. - 11.05.2019<br />
+Tintin Patrone ist Artist in Residence 2019 von studio das weisse haus und Zentrale<br /><br />
 
 30.04. Arnaud Riviere + Olivier di Placido
 
