--- a/archiv.html
+++ b/archiv.html
@@ -10,10 +10,13 @@ group: navigation
 <p style="font-size:18px" text-align="justify" align="right">
 
 
+Lydia Nsiah 17.05.19 
 <br /><br />
 Arnaud Riviere + Olivier di Placido 30.04.19
 <br /><br />
 JD Zazie / Angelica Castello 16.04.19
+<br /><br />
+Tintin Patrone - 11.04.19
 <br /><br />
 Binär / Nicolás Spencer - 04.04.19
 <br /><br />
