--- a/archiv.html
+++ b/archiv.html
@@ -10,11 +10,11 @@ group: navigation
 <p style="font-size:18px" text-align="justify" align="right">
 
 
-Lydia Nsiah 17.05.19 
+Lydia Nsiah - 17.05.19 
 <br /><br />
-Arnaud Riviere + Olivier di Placido 30.04.19
+Arnaud Riviere + Olivier di Placido - 30.04.19
 <br /><br />
-JD Zazie / Angelica Castello 16.04.19
+JD Zazie / Angelica Castello - 16.04.19
 <br /><br />
 Tintin Patrone - 11.04.19
 <br /><br />
