--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ color:rgb(120,10,0);
 17.05.2019 Lydia Nsiah "to forget" (Ausstellung)<br />
 Ausstellungsdauer: 18.05. - 15.06.2019<br />
 
-{% comment %}
+
 ________________________________________________________________<br />
 
 
@@ -48,9 +48,17 @@ ________________________________________________________________<br />
 
 .bald:<br /><br />
 
+14.06. Adelaide Ivanova & Carlos Vasconcelos<br /><br />
 
+15.06. Dieb13 & Noid<br /><br />
+
+19.06. Gruppenausstellung: THIS.TOPIA<br />
+	   mit: Arno Egger, Michael Koch, Eva Maria Schartmüller & Robert Reszner<br />
+	   Ausstellungsdauer: 20.06. - 31.08.2019
+
+
+{% comment %}
 {% endcomment %}
-
 
 
 {% comment %}
