--- a/archiv.html
+++ b/archiv.html
@@ -10,6 +10,12 @@ group: navigation
 <p style="font-size:18px" text-align="justify" align="right">
 
 
+THIS.TOPIA / Arno Egger, Michael Koch, Eva Maria Schartmüller & Robert Reszner - 19.06.19
+<br /><br />
+Extrablöd: Nina Bauer / Dieb13 / Noid - 15.06.19
+<br /><br />
+Adelaide Ivanova & Carlos Vasconcelos - 14.06.19
+<br /><br />
 Lydia Nsiah - 17.05.19 
 <br /><br />
 Arnaud Riviere + Olivier di Placido - 30.04.19
