--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@ color:rgb(120,10,0);
 
 19.06. Gruppenausstellung: THIS.TOPIA<br />
 	   mit: Arno Egger, Michael Koch, Eva Maria Schartmüller & Robert Reszner<br />
-	   Ausstellungsdauer: 20.06. - 31.08.2019
-
+	   Ausstellungsdauer: 20.06. - 31.08.2019<br />
+<br />
+Die Zentrale macht von 15.07. - 31.08.2019 Sommerpause und bleibt geschlossen. 
+Die Ausstellung THIS.TOPIA ist dennoch über unser Schaufenster ersichtlich.
 
 {% comment %}
 
