--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@ color:rgb(120,10,0);
 <br />
 
 
+.bald:<br /><br />
 
+05.09. SHOJIKI / Rolando Hernández
+
+
+________________________________________________________________<br />
+
+
+<br />
+<br />
 
 
 .jetzt:<br /><br />
@@ -49,9 +58,6 @@ ________________________________________________________________<br />
 
 <br />
 <br />
-
-
-.bald:<br /><br />
 
 
 {% endcomment %}
