--- a/index.html
+++ b/index.html
@@ -31,8 +31,20 @@ color:rgb(120,10,0);
 
 .bald:<br /><br />
 
-05.09. SHOJIKI / Rolando Hernández
 
+19.09.2019 Leonhard Peschta "The Butterfly Project" (Ausstellung)<br />
+Ausstellungsdauer: 20.09. - 07.10.2019<br />
+
+<br />
+24.09.2019 Michael Winter & Robert Blatt (performance/concert)<br />
+
+26.09.2019 Verena Sinn & Mathias Meinharter (performance/concert)<br />
+
+07.10.2019 Jason Kahn + Christian Wolfarth / Christian Schroeder + Bilwa Costa (performance/concert)<br />
+
+
+
+{% comment %}
 
 ________________________________________________________________<br />
 
@@ -44,14 +56,7 @@ ________________________________________________________________<br />
 .jetzt:<br /><br />
 
 
-19.06. Gruppenausstellung: THIS.TOPIA<br />
-	   mit: Arno Egger, Michael Koch, Eva Maria Schartmüller & Robert Reszner<br />
-	   Ausstellungsdauer: 20.06. - 31.08.2019<br />
-<br />
-Die Zentrale macht von 15.07. - 31.08.2019 Sommerpause und bleibt geschlossen. 
-Die Ausstellung THIS.TOPIA ist dennoch über unser Schaufenster ersichtlich.
 
-{% comment %}
 
 ________________________________________________________________<br />
 
@@ -64,6 +69,13 @@ ________________________________________________________________<br />
 
 
 {% comment %}
+
+19.06. Gruppenausstellung: THIS.TOPIA<br />
+	   mit: Arno Egger, Michael Koch, Eva Maria Schartmüller & Robert Reszner<br />
+	   Ausstellungsdauer: 20.06. - 31.08.2019<br />
+<br />
+Die Zentrale macht von 15.07. - 31.08.2019 Sommerpause und bleibt geschlossen. 
+Die Ausstellung THIS.TOPIA ist dennoch über unser Schaufenster ersichtlich.
 
 
 14.06. Adelaide Ivanova & Carlos Vasconcelos<br /><br />
