--- a/archiv.html
+++ b/archiv.html
@@ -9,7 +9,8 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
-
+SHOJIKI / Rolando Hernández - 05.09.19
+<br /><br />
 THIS.TOPIA / Arno Egger, Michael Koch, Eva Maria Schartmüller & Robert Reszner - 19.06.19
 <br /><br />
 Extrablöd: Nina Bauer / Dieb13 / Noid - 15.06.19
