--- a/archiv.html
+++ b/archiv.html
@@ -9,6 +9,13 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
+
+Verena Sinn & Mathias Meinharter - 26.09.19 
+<br /><br />
+Michael Winter & Robert Blatt - 24.09.19 
+<br /><br />
+Leonhard Peschta - 19.09.19 	
+<br /><br />
 SHOJIKI / Rolando Hernández - 05.09.19
 <br /><br />
 THIS.TOPIA / Arno Egger, Michael Koch, Eva Maria Schartmüller & Robert Reszner - 19.06.19
