--- a/index.html
+++ b/index.html
@@ -28,17 +28,20 @@ color:rgb(120,10,0);
 <p style="font-size:18px" text-align="justify" align="left">
 <br />
 
-
-.bald:<br /><br />
-
-
+.jetzt:<br /><br />
 19.09.2019 Leonhard Peschta "The Butterfly Project" (Ausstellung)<br />
 Ausstellungsdauer: 20.09. - 07.10.2019<br />
 
-<br />
-24.09.2019 Michael Winter & Robert Blatt (performance/concert)<br />
 
-26.09.2019 Verena Sinn & Mathias Meinharter (performance/concert)<br />
+________________________________________________________________<br />
+
+
+<br />
+<br />
+
+.bald:<br /><br />
+
+1.10.2019 OM / Ofir Klemperer + Michael Fischer<br /> 
 
 07.10.2019 Jason Kahn + Christian Wolfarth / Christian Schroeder + Bilwa Costa (performance/concert)<br />
 
@@ -52,17 +55,6 @@ ________________________________________________________________<br />
 <br />
 <br />
 
-
-.jetzt:<br /><br />
-
-
-
-
-________________________________________________________________<br />
-
-
-<br />
-<br />
 
 
 {% endcomment %}
