--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@ ________________________________________________________________<br />
 
 07.10.2019 Jason Kahn + Christian Wolfarth / Christian Schroeder + Bilwa Costa (performance/concert)<br />
 
+25.10.2019 Volna / Alexander Felch<br />
 
+26.10.2019 Stefanie Egedy / Mikko Savela<br />
 
 {% comment %}
 
