--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@ color:rgb(120,10,0);
 <p style="font-size:18px" text-align="justify" align="left">
 <br />
 
+{% comment %}
+
 .jetzt:<br /><br />
 19.09.2019 Leonhard Peschta "The Butterfly Project" (Ausstellung)<br />
 Ausstellungsdauer: 20.09. - 07.10.2019<br />
-
 
 ________________________________________________________________<br />
 
@@ -39,11 +40,10 @@ ________________________________________________________________<br />
 <br />
 <br />
 
+{% endcomment %}
+
+
 .bald:<br /><br />
-
-01.10.2019 OM / Ofir Klemperer + Michael Fischer<br /> 
-
-07.10.2019 Jason Kahn + Christian Wolfarth / Christian Schroeder + Bilwa Costa (performance/concert)<br />
 
 25.10.2019 Volna / Alexander Felch<br />
 
