--- a/archiv.html
+++ b/archiv.html
@@ -9,6 +9,12 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
+
+
+Stefanie Egedy / Mikko Savela - 26.10.19
+<br /><br />
+Volna / Alexander Felch - 25.10.19	
+<br /><br />
 Jason Kahn + Christian Wolfarth / Christian Schroeder + Bilwa Costa - 07.10.19
 <br /><br />
 Ofir Klemperer + Michael Fischer - 01.10.19
