--- a/archiv.html
+++ b/archiv.html
@@ -9,6 +9,8 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
+Karl Salzmann / Paul Gründorfer - 20.12.19
+<br /><br />
 Hui Ye - 13.12.19
 <br /><br />
 Stefanie Egedy / Mikko Savela - 26.10.19
