--- a/info.html
+++ b/info.html
@@ -7,7 +7,8 @@ group: navigation
 
 <hr>
 <p>
-Die Zentrale versteht sich als Ort der Vernetzung und Distribution von Kunst, an dem Prozesse, Präsentationen und performative Interventionen Raum finden. Im Fokus stehen die Ränder künstlerischer Entwicklung und Forschung, die sich im weitesten Sinne mit Klang, Skulptur und/oder Prozess beschäftigen. Neben Ausstellungen, Konzerten/Performances und Workshops, ist die Zentrale auch Ort für Austausch und Diskurs mit angebundenem Archiv für Tonträger und Künstlerpublikationen.
+Die Zentrale versteht sich als Ort der Vernetzung und Distribution von Kunst, an dem Prozesse, Präsentationen und performative Interventionen Raum finden. Im Fokus stehen die Ränder künstlerischer Entwicklung und Forschung, die sich im weitesten Sinne mit Klang, Skulptur und/oder Prozess beschäftigen. Neben Ausstellungen, Konzerten/Performances und Workshops, ist die Zentrale auch Ort für Austausch und Diskurs mit angebundenem Archiv für Tonträger und Künstlerpublikationen.<br />
+Die Zentrale war von September 2016 bis Jänner 2020 geöffnet.
 <br /><br />
 
 
@@ -16,8 +17,10 @@ Die Zentrale versteht sich als Ort der Vernetzung und Distribution von Kunst, an
 <br />
 Neulerchenfelderstraße 52, 1160 Wien
 <br />
+{% comment %}
 Öffnungzeiten: Donnerstag 12 - 18h, Freitag 16 - 19h, sowie nach Absprache
 <br /><br />
+{% endcomment %}
 mail[at]zentrale.jetzt
 <br />
 <a href="https://facebook.com/Zentrale.jetzt" target="_blank">FB</a>
@@ -26,7 +29,7 @@ mail[at]zentrale.jetzt
 
 
 <br /><br />
-Das Zentrale Jahresprogramm 2019 wird unterstützt von: Wien Kultur, Bezirksvertretung Ottakring (Franz Prokop), BKA <br />
+Das Zentrale Jahresprogramm wurde unterstützt von: Wien Kultur, Bezirksvertretung Ottakring (Franz Prokop), BKA <br />
 
 <img src="{{ site.url }}/images/Wien_Kultur_small.gif" alt="image">
 
