--- a/info.html
+++ b/info.html
@@ -7,7 +7,7 @@ group: navigation
 
 <hr>
 <p>
-Die Zentrale versteht sich als Ort der Vernetzung und Distribution von Kunst, an dem Prozesse, Präsentationen und performative Interventionen Raum finden. Im Fokus stehen die Ränder künstlerischer Entwicklung und Forschung, die sich im weitesten Sinne mit Klang, Skulptur und/oder Prozess beschäftigen. Neben Ausstellungen, Konzerten/Performances und Workshops, ist die Zentrale auch Ort für Austausch und Diskurs mit angebundenem Archiv für Tonträger und Künstlerpublikationen.<br />
+Die Zentrale versteht sich als Ort der Vernetzung und Distribution von Kunst, an dem Prozesse, Präsentationen und performative Interventionen Raum finden. Im Fokus stehen die Ränder künstlerischer Entwicklung und Forschung, die sich im weitesten Sinne mit Klang, Skulptur und/oder Prozess beschäftigen. Neben Ausstellungen, Konzerten/Performances und Workshops, ist die Zentrale auch Ort für Austausch und Diskurs mit angebundenem Archiv für Tonträger und Künstlerpublikationen.<br /><br />
 Die Zentrale war von September 2016 bis Jänner 2020 geöffnet.
 <br /><br />
 
